Set source compatiblity to Java 17
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>